# search_filter_hh.ru

./: .gitignore  README.md  main.py  pyproject.toml
classes/: __init__.py  database.py  headhunter.py
data_files/: database.ini  requests.sql
utils/: config.py
